# compile-python-requirements-action

./: .gitignore  .secrets.baseline  CHANGELOG.rst  Makefile  README.rst  SECURITY.rst  action.yml  pyproject.toml
.github/workflows/: test-pyproject-toml-action.yml  test-pyproject-toml-makefile.yml  test-requirements-in-action.yml  test-requirements-in-makefile.yml
docs/: conf.py  documentation.rst  requirements.txt
examples/: Makefile
examples/pyproject-toml/: pyproject.toml
examples/pyproject-toml/requirements/: macos-latest.txt  ubuntu-latest.txt  windows-latest.txt
examples/requirements-in/requirements/: macos-latest.txt  ubuntu-latest.txt  windows-latest.txt
